# amux

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  REFACTOR_PLAN.md  skills-lock.json
.amux/: knowledge.json
.github/workflows/: ci.yml  release.yml
.gsd/: CODEBASE.md  DECISIONS.md  KNOWLEDGE.md  PREFERENCES.md  PROJECT.md  QUEUE.md  REQUIREMENTS.md  ROADMAP.md  last-snapshot.md  notifications.jsonl
.gsd/exec/: 01ea6b24-c684-4798-8284-4a977b263212.meta.json  01ea6b24-c684-4798-8284-4a977b263212.stdout  04438d39-8104-42ee-b833-05ff42b4fab6.meta.json  05812843-9433-4478-b82c-e8e61a46de54.meta.json  05812843-9433-4478-b82c-e8e61a46de54.stdout  07423190-daa5-4163-a412-831fdcb39368.meta.json  07423190-daa5-4163-a412-831fdcb39368.stdout  0840716a-7264-474b-8195-1c31a890493f.meta.json  0840716a-7264-474b-8195-1c31a890493f.stdout  08772c2b-9d69-4cad-a22c-202849c371f1.meta.json  08772c2b-9d69-4cad-a22c-202849c371f1.stdout  089521f2-c978-4542-bcd1-1940a3ed6b17.meta.json  089521f2-c978-4542-bcd1-1940a3ed6b17.stdout  091679f1-e543-4c9a-836c-e1d1283da3fa.meta.json  091679f1-e543-4c9a-836c-e1d1283da3fa.stdout  09e8e991-28de-4a1e-bf4e-decf5633a798.meta.json  09e8e991-28de-4a1e-bf4e-decf5633a798.stdout  0acfa1bc-2cd1-4d1e-972b-3133e1d56fa6.meta.json  0c33bdb4-c02d-4cad-8abc-26a96de153c3.meta.json  0c33bdb4-c02d-4cad-8abc-26a96de153c3.stdout  0cdaa754-4c41-4d8f-bfc0-947df87cc336.meta.json  (+390 more)
.planning/: IMPROVEMENTS.md
docs/: chains.md  config.md
src/: app.rs  attach.rs  budget.rs  chain.rs  config.rs  discovery.rs  discovery_walk.rs  doctor.rs  extraction.rs  headless.rs  knowledge.rs  lib.rs  main.rs  mcp.rs  preflight.rs  procfs.rs  pty.rs  search_engine.rs  session_title.rs  stats.rs  template.rs  theme.rs  types.rs  util.rs  watch.rs  worktree.rs
src/app/: browse.rs  (+16 more)
tests/: insta_snapshots.rs  pty_integration.rs
(+160 files in other folders)
