[package]
name = "amux"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1"
arboard = "3"
code-fuzzy-match = "0.2"
bytes = "1"
notify = { version = "7", features = ["macos_kqueue"] }
libc = "0.2"
crossterm = "0.29"
portable-pty = "0.8"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tui-term = "0.3.4"
vt100 = "0.16"
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
tower-http = { version = "0.5", features = ["cors"] }
parking_lot = "0.12"
subtle = "2"
