[package]
name = "amux"
version = "0.3.0"
edition = "2024"
description = "TUI multiplexer for AI coding agents (Claude Code, Codex, OMP)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nicepkg/amux"
keywords = ["tui", "ai", "claude", "codex", "pty", "multiplexer"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
anyhow = "1"
arboard = "3"
code-fuzzy-match = "0.2"
bytes = "1"
notify = { version = "7", features = ["macos_kqueue"] }
libc = "0.2"
crossterm = "0.29"
portable-pty = "0.8"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
tower-http = { version = "0.5", features = ["cors"] }
parking_lot = "0.12"
subtle = "2"
alacritty_terminal = "0.26.0"
rayon = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
dashmap = "6"
hashbrown = { version = "0.17.1", features = ["serde"] }

[dev-dependencies]
insta = "1.47.2"
tower = "0.5"
http = "1"
http-body-util = "0.1"
